fixed mobile queries to make it look more decent on smaller screens

--- a/frontend/frontend/src/Favourites.css
+++ b/frontend/frontend/src/Favourites.css
@@ -33,12 +33,14 @@
     font-size: 1rem;
   }
   .empty-message {
-    font-family: montserrat;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 500;
     text-align: center;
     font-size: 3rem;
     color: var(--green4); 
-    margin-top: 200px;
+    margin-top: 150px;
+    margin-left:50px;
+    margin-right:50px;
   }
   
   .add-to-team {
