--- a/frontend/frontend/src/NavBar.css
+++ b/frontend/frontend/src/NavBar.css
@@ -7,6 +7,7 @@
     top: 0;
     width: 100%;
     z-index: 3;
+    overflow-x: hidden;
 }
 .navbar ul, .navbar li, .navbar h1, .navbar a {
     color: var(--green1);
