--- a/frontend/frontend/src/playerDetails.css
+++ b/frontend/frontend/src/playerDetails.css
@@ -17,5 +17,6 @@
   .player-name{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 4rem;
+    margin:20px;
     
   }
